--- a/m2_분석라이브러리활용/numpy/numpy_응용_복습.ipynb
+++ b/m2_분석라이브러리활용/numpy/numpy_응용_복습.ipynb
@@ -921,7 +921,7 @@
    "source": [
     "# 배열 집합 연산\n",
     "names = np.array(['Bob','Joe','Will','Joe','Joe'])\n",
-    "np.unique(names)"
+    "np.unique(names) # 중복제거  -> 파이썬 자료형인 set과 동일"
    ]
   },
   {
@@ -944,7 +944,7 @@
    "source": [
     "import numpy as np\n",
     "names = np.array(['Bob','Joe','Will','Joe','Joe'])\n",
-    "sorted(set(names))"
+    "sorted(set(names)) "
    ]
   },
   {
@@ -967,7 +967,7 @@
    "source": [
     "# 첫번째 배열의 원소가 두번째 배열의 원소를 포함하는지 알려주는 불리언 배열을 반환\n",
     "values = np.array([6,0,0,3,2,5,6])\n",
-    "np.in1d(values, [2,3,6])"
+    "np.in1d(values, [2,3,6]) # values와 [2,3,6]을 비교해 [2,3,6]값이 values에 있으면 true, 없으면 false반환"
    ]
   },
   {
@@ -1760,10 +1760,9 @@
     "a = np.array([11,11,3,3,2,2,2,7])\n",
     "\n",
     "# 주어진 배열에서 중복된거 제거 후 출력\n",
-    "index,count = np.unique(a,return_counts=True)\n",
-    "\n",
-    "print(index) #\n",
-    "print(count) # 2는3개, 3은 2개, 7은1개, 11은 2개"
+    "index,count = np.unique(a,return_counts=True)  # index와 count를 unique함수에서 받아줌\n",
+    "print(index) # unique한 숫자만 -> 중복 제거\n",
+    "print(count) # unique한 숫자의 개수를 출력"
    ]
   },
   {
@@ -1785,7 +1784,7 @@
     }
    ],
    "source": [
-    "np.random.uniform(1.0,2.0, 10)"
+    "np.random.uniform(1.0,2.0, 10) # 1.0 과 2.0 사이의 난수 10개를 뽑아줌"
    ]
   },
   {
@@ -1804,7 +1803,7 @@
     }
    ],
    "source": [
-    "print(np.random.uniform(0,1,(2,3))) # uniform은 범위지정해줘야함"
+    "print(np.random.uniform(0,1,(2,3))) # 0과 1사이의 실수 난수를 2행 3열로 뽑음 + size 추가 가능"
    ]
   },
   {
@@ -1828,7 +1827,7 @@
    "source": [
     "# 0 ~ 1 사이의 난수 실수값으로 행렬 생성\n",
     "# uniform 함수의 최소값, 최대값을 각각 0, 1로 지정한 것과 같음\n",
-    "np.random.random_sample((2,3))"
+    "np.random.random_sample((2,3)) # random_sample은 최소값 0 최댓값이 1임"
    ]
   },
   {
@@ -1878,8 +1877,8 @@
     }
    ],
    "source": [
-    "ar = np.random.rand(4,8) # rand 균일분포 4행 8열\n",
-    "ar"
+    "ar = np.random.rand(4,8) # rand 균일분포 4행 8열 <--> randn은 표준정규분포\n",
+    "ar "
    ]
   },
   {
@@ -2021,7 +2020,7 @@
    "source": [
     "columns = ['id','gender','age','region','product','price','qty','time'] # 칼럼 지정\n",
     "index = [np.arange(4)] # 인덱스 지정\n",
-    "df = pd.DataFrame(ar,index,columns=columns)\n",
+    "df = pd.DataFrame(ar,index,columns=columns) # 데이터, index , 칼럼 값 주어서 기본적인 dataframe을 생성\n",
     "df"
    ]
   },
@@ -2343,17 +2342,16 @@
     "ar = np.zeros((4,3)) # 4행 3열짜리 배열 만들어줌\n",
     "columns = ['id','gender','age'] # 열 정해주고\n",
     "index = [np.arange(4)] # 행 넣어주고 (4행이니까)\n",
-    "df = pd.DataFrame(ar,index,columns=columns) # 데이터 프레임에 ar, index, colunms을 넣어줌 -> 데이터프레임 완성\n",
+    "df = pd.DataFrame(ar,index,columns=columns) # 데이터 프레임에 데이터 ar, index, colunms을 넣어줌 -> 기본 데이터프레임 완성\n",
     "\n",
     "# df.id = np.array([1,2,3,4])\n",
     "df.id = np.arange(1,5) # 데이터프레임.id 에 1~4까지 \n",
     "\n",
     "# df.gender = np.array([0,1,0,1])\n",
     "np.random.seed(0) # 변하지 않기 위해 seed\n",
+    "df.gender = np.random.randint(2,size=4) # randint 2 -> 0,1 만 들어가고 size 4개\n",
     "\n",
-    "df.gender = np.random.randint(2,size=4) # randint 2 -> 0,1 size 4개\n",
     "# df.age = np.array([20,30,40,50])\n",
-    "\n",
     "df.age = np.arange(1,5) * 10  # 배열 연산\n",
     "df"
    ]
