--- a/m2_분석라이브러리활용/numpy/numpy_응용_복습.ipynb
+++ b/m2_분석라이브러리활용/numpy/numpy_응용_복습.ipynb
@@ -2345,7 +2345,7 @@
     "df = pd.DataFrame(ar,index,columns=columns) # 데이터 프레임에 데이터 ar, index, colunms을 넣어줌 -> 기본 데이터프레임 완성\n",
     "\n",
     "# df.id = np.array([1,2,3,4])\n",
-    "df.id = np.arange(1,5) # 데이터프레임.id 에 1~4까지 \n",
+    "df.id = np.arange(1,5) # 데이터프레임-> id 에 1~4까지 \n",
     "\n",
     "# df.gender = np.array([0,1,0,1])\n",
     "np.random.seed(0) # 변하지 않기 위해 seed\n",
@@ -2361,23 +2361,442 @@
    "id": "8d102de6",
    "metadata": {},
    "source": [
-    "[과제] 아래 가이드에 따라서 고객 구매데이터를 생성하고 데이터프레임으로 변환하여 출력하세요(관측치 1000개)\n",
+    "[과제] 아래 가이드에 따라서 고객 구매데이터를 생성하고 데이터프레임으로 변환하여 출력하세요. 단, 동일 상품코드에 대해서는 동일 가격 적용(관측치 10000개)\n",
     "\n",
-    "- id : 1 ~ 1000번 일련번호\n",
-    "- gender : 0,1 정수 난수 생성\n",
-    "- age : 0 ~ 80사이 정수 난수 생성\n",
-    "- region : 1 ~ 10 사이 정수 난수 생성\n",
-    "- product_19 : 제품코드 11111 ~ 99999\n",
-    "- product_20 : 제품코드 11111 ~ 99999\n",
-    "- price_19 : 1000 ~ 50000 사이 실수 난수 생성\n",
-    "- price_20 : 1000 ~ 50000 사이 실수 난수 생성\n",
-    "- quantity_19 : 1 ~ 100 사이 정수 난수 생성\n",
-    "- quantity_20 : 1 ~ 100 사이 정수 난수 생성\n",
-    "- time_19 : 01 ~ 24 사이 정수 난수 생성\n",
-    "- time_20 : 01 ~ 24 사이 정수 난수 생성\n",
-    "- amount_19 : price_19 * quantity_19\n",
-    "- amount_20 : price_20 * quantity_20\n",
-    "- sales : 19년 대비 20년구매금액이 증가면 1, 감소면 0"
+    "id : 1 ~ 10000번 일련번호\n",
+    "\n",
+    "gender : 0,1 정수 난수 생성\n",
+    "\n",
+    "age : 0 ~ 80사이 정수 난수 생성\n",
+    "\n",
+    "region : 1 ~ 10 사이 정수 난수 생성\n",
+    "\n",
+    "product_19 : 제품코드 111 ~ 222\n",
+    "\n",
+    "product_20 : 제품코드 111 ~ 222\n",
+    "\n",
+    "price_19 : 1000 ~ 50000 사이 실수 난수 생성\n",
+    "\n",
+    "price_20 : 1000 ~ 50000 사이 실수 난수 생성\n",
+    "\n",
+    "quantity_19 : 1 ~ 100 사이 정수 난수 생성\n",
+    "\n",
+    "quantity_20 : 1 ~ 100 사이 정수 난수 생성\n",
+    "\n",
+    "time_19 : 01 ~ 24 사이 정수 난수 생성\n",
+    "\n",
+    "time_20 : 01 ~ 24 사이 정수 난수 생성\n",
+    "\n",
+    "amount_19 : price_19 * quantity_19\n",
+    "\n",
+    "amount_20 : price_20 * quantity_20\n",
+    "\n",
+    "sales : 19년 대비 20년구매금액이 증가면 1, 감소면 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b42e72c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 14)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>product_19</th>\n",
+       "      <th>product_20</th>\n",
+       "      <th>price_19</th>\n",
+       "      <th>price_20</th>\n",
+       "      <th>quantity_19</th>\n",
+       "      <th>quantity_20</th>\n",
+       "      <th>time_19</th>\n",
+       "      <th>time_20</th>\n",
+       "      <th>amount_19</th>\n",
+       "      <th>amount_20</th>\n",
+       "      <th>sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>10</td>\n",
+       "      <td>134</td>\n",
+       "      <td>129</td>\n",
+       "      <td>32700</td>\n",
+       "      <td>20500</td>\n",
+       "      <td>51</td>\n",
+       "      <td>65</td>\n",
+       "      <td>21</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1667700</td>\n",
+       "      <td>1332500</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>36</td>\n",
+       "      <td>182</td>\n",
+       "      <td>186</td>\n",
+       "      <td>13000</td>\n",
+       "      <td>42200</td>\n",
+       "      <td>89</td>\n",
+       "      <td>27</td>\n",
+       "      <td>22</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1157000</td>\n",
+       "      <td>1139400</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>F</td>\n",
+       "      <td>79</td>\n",
+       "      <td>122</td>\n",
+       "      <td>161</td>\n",
+       "      <td>47600</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>70</td>\n",
+       "      <td>24</td>\n",
+       "      <td>4</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3332000</td>\n",
+       "      <td>26400</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>M</td>\n",
+       "      <td>33</td>\n",
+       "      <td>197</td>\n",
+       "      <td>154</td>\n",
+       "      <td>44200</td>\n",
+       "      <td>36600</td>\n",
+       "      <td>34</td>\n",
+       "      <td>7</td>\n",
+       "      <td>18</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1502800</td>\n",
+       "      <td>256200</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>F</td>\n",
+       "      <td>59</td>\n",
+       "      <td>146</td>\n",
+       "      <td>173</td>\n",
+       "      <td>26900</td>\n",
+       "      <td>22500</td>\n",
+       "      <td>89</td>\n",
+       "      <td>28</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2394100</td>\n",
+       "      <td>630000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id gender  age  product_19  product_20  price_19  price_20  quantity_19  \\\n",
+       "1   1      M   10         134         129     32700     20500           51   \n",
+       "2   2      F   36         182         186     13000     42200           89   \n",
+       "3   3      F   79         122         161     47600      1100           70   \n",
+       "4   4      M   33         197         154     44200     36600           34   \n",
+       "5   5      F   59         146         173     26900     22500           89   \n",
+       "\n",
+       "   quantity_20  time_19  time_20  amount_19  amount_20  sales  \n",
+       "1           65       21        3    1667700    1332500      0  \n",
+       "2           27       22       21    1157000    1139400      0  \n",
+       "3           24        4       19    3332000      26400      0  \n",
+       "4            7       18       21    1502800     256200      0  \n",
+       "5           28       12       11    2394100     630000      0  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "customer = 10000  #id 만개 할당\n",
+    "\n",
+    "array = np.zeros((customer,14), dtype=int) # array에 10000행 14열 짜리 행렬에 0을채워라 자료형은 int로\n",
+    "df = pd.DataFrame(array, (np.arange(1,customer+1)), # 1부터 10000까지 나오게 하려면 +1 해줘야함 why? arange는 처음부터 끝값 포함 안하니까\n",
+    "                  columns = ['id','gender','age','product_19','product_20','price_19','price_20','quantity_19','quantity_20','time_19','time_20','amount_19','amount_20','sales'])\n",
+    "                  \n",
+    "                \n",
+    "np.random.seed(0) # 시드 고정\n",
+    "df.id = np.arange(1, customer+1) # id는 1부터 부여 ~ 10000 까지 -> 10000 포함\n",
+    "df.gender = np.random.choice(['M','F'],customer) # M,F 선택 -> 10000개 pool에서\n",
+    "df.age = np.random.randint(1,81, size=customer) # 1에서 80까지 랜덤 정수 추출 -> 10000개 pool에서\n",
+    "df.product_19 = np.random.randint(111,222,size=customer) # 111부터 221까지 -> 10000개 pool에서\n",
+    "df.product_20 = np.random.randint(111,222, size= customer) # 111부터 221까지 -> 10000개 pool에서\n",
+    "                  \n",
+    "# 가격 -> 1000 ~ 50000 사이 실수 난수 생성 해야 하므로 -> 1000 ~ 49999                   \n",
+    "pricearray = np.random.randint(10,500, size =1000)*100  # 10부터 499까지 -> 1000개 pool 거기에 100씩 곱\n",
+    "                  \n",
+    "for i in range(1, customer+1): # 1부터 10000 까지 \n",
+    "     df.price_19[i]= pricearray[df.product_19[i]] # df.price_19[1] = pricearray[df.product_19[1]]\n",
+    "     df.price_20[i]= pricearray[df.product_20[i]] # for문 끝나는 부분\n",
+    "\n",
+    "# 들여 쓰기\n",
+    "df.quantity_19 = np.random.randint(1,101, size = customer) # 1부터 100까지 size -> 10000개 pool\n",
+    "df.quantity_20 = np.random.randint(1,101, size= customer)\n",
+    "                  \n",
+    "                \n",
+    "df.time_19 = np.random.randint(1,25,size=customer) # 01 ~ 24 사이 정수 난수 생성\n",
+    "df.time_20 = np.random.randint(1,25,size= customer)\n",
+    "                  \n",
+    "df.amount_19 = df.price_19 * df.quantity_19 # price_19 * quantity_19\n",
+    "df.amount_20 = df.price_20 * df.quantity_20\n",
+    "                  \n",
+    "# sales : 19년 대비 20년구매금액이 증가면 1, 감소면 0                \n",
+    "for i in range(1, customer+1):  # 10000 번 실행\n",
+    "    if df.amount_20[i]>df.amount_19[i]: # amount_20 > amount_19보다 크면\n",
+    "         df.sales[i]=1 # dataframe.sales에 1 할당\n",
+    "    else:\n",
+    "         df.sales[i]=0 # for문 끝나는 부분\n",
+    "                  \n",
+    "print(df.shape)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ae3fbfde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "customer = 4\n",
+    "# np.zeros(shape, dtype, order)  --> np.zeros(행 열, dtype)\n",
+    "arr = np.zeros((customer,2),dtype=float) # arr에 4행 2열 행렬에 0을 채워라 dtype은 float\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "52443723",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5034\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>product_19</th>\n",
+       "      <th>product_20</th>\n",
+       "      <th>price_19</th>\n",
+       "      <th>price_20</th>\n",
+       "      <th>quantity_19</th>\n",
+       "      <th>quantity_20</th>\n",
+       "      <th>time_19</th>\n",
+       "      <th>time_20</th>\n",
+       "      <th>amount_19</th>\n",
+       "      <th>amount_20</th>\n",
+       "      <th>sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>F</td>\n",
+       "      <td>13</td>\n",
+       "      <td>184</td>\n",
+       "      <td>121</td>\n",
+       "      <td>25700</td>\n",
+       "      <td>31500</td>\n",
+       "      <td>95</td>\n",
+       "      <td>89</td>\n",
+       "      <td>24</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2441500</td>\n",
+       "      <td>2803500</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10</td>\n",
+       "      <td>F</td>\n",
+       "      <td>46</td>\n",
+       "      <td>134</td>\n",
+       "      <td>203</td>\n",
+       "      <td>32700</td>\n",
+       "      <td>23400</td>\n",
+       "      <td>28</td>\n",
+       "      <td>80</td>\n",
+       "      <td>24</td>\n",
+       "      <td>19</td>\n",
+       "      <td>915600</td>\n",
+       "      <td>1872000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13</td>\n",
+       "      <td>M</td>\n",
+       "      <td>71</td>\n",
+       "      <td>199</td>\n",
+       "      <td>204</td>\n",
+       "      <td>24700</td>\n",
+       "      <td>45200</td>\n",
+       "      <td>43</td>\n",
+       "      <td>98</td>\n",
+       "      <td>7</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1062100</td>\n",
+       "      <td>4429600</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>16</td>\n",
+       "      <td>M</td>\n",
+       "      <td>44</td>\n",
+       "      <td>211</td>\n",
+       "      <td>176</td>\n",
+       "      <td>3600</td>\n",
+       "      <td>41800</td>\n",
+       "      <td>25</td>\n",
+       "      <td>11</td>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>459800</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>18</td>\n",
+       "      <td>M</td>\n",
+       "      <td>58</td>\n",
+       "      <td>143</td>\n",
+       "      <td>150</td>\n",
+       "      <td>14000</td>\n",
+       "      <td>49900</td>\n",
+       "      <td>79</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1106000</td>\n",
+       "      <td>2495000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id gender  age  product_19  product_20  price_19  price_20  quantity_19  \\\n",
+       "7    7      F   13         184         121     25700     31500           95   \n",
+       "10  10      F   46         134         203     32700     23400           28   \n",
+       "13  13      M   71         199         204     24700     45200           43   \n",
+       "16  16      M   44         211         176      3600     41800           25   \n",
+       "18  18      M   58         143         150     14000     49900           79   \n",
+       "\n",
+       "    quantity_20  time_19  time_20  amount_19  amount_20  sales  \n",
+       "7            89       24       21    2441500    2803500      1  \n",
+       "10           80       24       19     915600    1872000      1  \n",
+       "13           98        7       24    1062100    4429600      1  \n",
+       "16           11       15       20      90000     459800      1  \n",
+       "18           50        1        8    1106000    2495000      1  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.sales==0]\n",
+    "print(len(df[df.sales==0]))\n",
+    "df[df.sales==1].head()"
    ]
   }
  ],
