--- a/m1_programming/m1_프로그래밍언어활용_평가_복습.ipynb
+++ b/m1_programming/m1_프로그래밍언어활용_평가_복습.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "45bc1aa1",
+   "metadata": {},
+   "source": [
+    "## 빅데이터 기반 AI 응용 솔루션 개발자 전문과정\n",
+    "\n",
+    "#### 교과목명 : 프로그래밍 언어 활용\n",
+    "\n",
+    "- 평가일 : 21.07.02\n",
+    "- 성명 : 조경윤\n",
+    "- 점수 : 100\n",
+    "\n",
+    "※ 문제당 5점으로 채점"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "458ff638",
    "metadata": {},
    "source": [
@@ -16,10 +32,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 변수를 선언합니다.\n",
     "numbers = [5, 15, 6, 20, 7, 25]\n",
     "\n",
-    "# 5의 배수 출력하기\n",
-    "for number in numbers:\n",
+    "# 5의 배수 출력하기 \n",
+    "for number in numbers: # 반복을 돌립니다\n",
     "    if number % 5 !=0: \n",
     "        continue  # 5의 배수가 아니면 pass 해라 -> 다시 위로 올라가라 -> 결국 5의 배수만 ..\n",
     "    print(number)"
@@ -603,7 +620,7 @@
    ],
    "source": [
     "numbers = [1,2,3,4,5,6,7,8,9]\n",
-    "output = [[], [], []]  # 칸이 3개이므로 %3\n",
+    "output = [[], [], []]  \n",
     "\n",
     "for number in numbers:\n",
     "    output[(number+2)%3].append(number)\n",
@@ -634,12 +651,12 @@
    ],
    "source": [
     "numbers = [3,6,3,5,8,2,9,7,4,3,6,3,5,8,2,9,7,4]\n",
-    "counter ={} # 딕셔너리 형태로 담기 -> key, value\n",
+    "counter ={} # 딕셔너리 형태로 담기 -> key, value  -> key는 index, value는 숫자가 몇 번 등장하는지 카운팅 해주는 변수\n",
     "for number in numbers: # numbers 리스트에 있는 숫자들을 하나씩 number에 할당\n",
     "    if number in counter: # counter에 number가 있으면\n",
-    "        counter[number]+=1  \n",
+    "        counter[number]+=1  # +1 카운팅\n",
     "    else:\n",
-    "        counter[number]=1\n",
+    "        counter[number]=1 # 그냥 둬\n",
     "print(counter) # 맨 마지막 출력은 처음 for문에 맞춰 들여쓰기"
    ]
   },
@@ -832,22 +849,22 @@
     "# tmp -> Temporary \n",
     "# ret -> return\n",
     "filename = 'data/names/yob2015.txt'\n",
-    "nameF={} # key, value 딕셔너리 형태\n",
-    "nameM={} \n",
+    "nameF = {} # key, value 딕셔너리 형태\n",
+    "nameM = {} \n",
     "\n",
     "with open(filename,'r') as f:\n",
-    "    data=f.readlines() # 전체 출력\n",
+    "    data = f.readlines() # 전체 출력\n",
     "    for d in data:\n",
     "        if d[-1] =='\\n': # 마지막 요소가 개행이면\n",
-    "            d =d[:-1] # 맨 마지막값을 d에 저장\n",
+    "            d = d[:-1] # 맨 마지막값을 d에 저장\n",
     "            \n",
-    "        tmp = d.split(',') # 구분자로 분리 하여 임시적인 변수 tmp에 담고\n",
+    "        tmp = d.split(',') # 쉼표로 분리 하여 임시적인 변수 tmp에 담고\n",
     "        name = tmp[0] # tmp[0]-> name\n",
     "        sex = tmp[1] # tmp[1]-> sex\n",
-    "        birth= tmp[2] # tmp[2]-> birth\n",
+    "        birth = tmp[2] # tmp[2]-> birth\n",
     "        \n",
     "        if sex =='F': # sex가 F이면\n",
-    "            ret=nameF  # nameF를 ret 변수에 담아\n",
+    "            ret = nameF  # 여자\n",
     "        else:\n",
     "            ret = nameM\n",
     "        \n",
