--- a/m6_머신러닝알고리즘이해및활용/붓꽃품종예측.ipynb
+++ b/m6_머신러닝알고리즘이해및활용/붓꽃품종예측.ipynb
@@ -1309,214 +1309,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "5e362d5c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepal length (cm)</th>\n",
-       "      <th>sepal width (cm)</th>\n",
-       "      <th>petal length (cm)</th>\n",
-       "      <th>petal width (cm)</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.222222</td>\n",
-       "      <td>0.625000</td>\n",
-       "      <td>0.067797</td>\n",
-       "      <td>0.041667</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>0.416667</td>\n",
-       "      <td>0.067797</td>\n",
-       "      <td>0.041667</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.111111</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.050847</td>\n",
-       "      <td>0.041667</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.083333</td>\n",
-       "      <td>0.458333</td>\n",
-       "      <td>0.084746</td>\n",
-       "      <td>0.041667</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.194444</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.067797</td>\n",
-       "      <td>0.041667</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.416667</td>\n",
-       "      <td>0.711864</td>\n",
-       "      <td>0.916667</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146</th>\n",
-       "      <td>0.555556</td>\n",
-       "      <td>0.208333</td>\n",
-       "      <td>0.677966</td>\n",
-       "      <td>0.750000</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>147</th>\n",
-       "      <td>0.611111</td>\n",
-       "      <td>0.416667</td>\n",
-       "      <td>0.711864</td>\n",
-       "      <td>0.791667</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>148</th>\n",
-       "      <td>0.527778</td>\n",
-       "      <td>0.583333</td>\n",
-       "      <td>0.745763</td>\n",
-       "      <td>0.916667</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>0.444444</td>\n",
-       "      <td>0.416667</td>\n",
-       "      <td>0.694915</td>\n",
-       "      <td>0.708333</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>150 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-       "0             0.222222          0.625000           0.067797          0.041667   \n",
-       "1             0.166667          0.416667           0.067797          0.041667   \n",
-       "2             0.111111          0.500000           0.050847          0.041667   \n",
-       "3             0.083333          0.458333           0.084746          0.041667   \n",
-       "4             0.194444          0.666667           0.067797          0.041667   \n",
-       "..                 ...               ...                ...               ...   \n",
-       "145           0.666667          0.416667           0.711864          0.916667   \n",
-       "146           0.555556          0.208333           0.677966          0.750000   \n",
-       "147           0.611111          0.416667           0.711864          0.791667   \n",
-       "148           0.527778          0.583333           0.745763          0.916667   \n",
-       "149           0.444444          0.416667           0.694915          0.708333   \n",
-       "\n",
-       "     target  \n",
-       "0       0.0  \n",
-       "1       0.0  \n",
-       "2       0.0  \n",
-       "3       0.0  \n",
-       "4       0.0  \n",
-       "..      ...  \n",
-       "145     1.0  \n",
-       "146     1.0  \n",
-       "147     1.0  \n",
-       "148     1.0  \n",
-       "149     1.0  \n",
-       "\n",
-       "[150 rows x 5 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'최댓값:'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "sepal length (cm)    1.0\n",
-       "sepal width (cm)     1.0\n",
-       "petal length (cm)    1.0\n",
-       "petal width (cm)     1.0\n",
-       "target               1.0\n",
-       "dtype: float64"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'최솟값:'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "sepal length (cm)    0.0\n",
-       "sepal width (cm)     0.0\n",
-       "petal length (cm)    0.0\n",
-       "petal width (cm)     0.0\n",
-       "target               0.0\n",
-       "dtype: float64"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# [과제] iris_df를 정규화 수행 결과와 평균, 분산을 출력하세요"
+    "# [과제] iris_df를 정규화 수행 결과와 평균, 분산을 출력하세요\n",
+    "from sklearn.preprocessing import StandardScaler\n"
    ]
   },
   {
@@ -1731,6 +1530,7 @@
     "# MinMax 수행 후 최대 최소를 출력하세요.\n",
     "# MinMax -> 0과 1사이에서의 위치를 알려줌\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
     "scaler = MinMaxScaler() # 객체 생성\n",
     "scaled_data =  scaler.fit_transform(iris_df) # 스케일링 fi_transform\n",
     "\n",
