--- a/m2_분석라이브러리활용/pandas/pandas_데이터처리_복습.ipynb
+++ b/m2_분석라이브러리활용/pandas/pandas_데이터처리_복습.ipynb
@@ -161,7 +161,7 @@
    "source": [
     "# 데이터프레임 갱신\n",
     "df1= file_data.copy() # 원본은 냅두고 카피로 처리\n",
-    "df2=pd.DataFrame({\n",
+    "df2 = pd.DataFrame({\n",
     "    '차림표':['비빔밥','돈까스','라면','김밥','제육덮밥'], # 데이터 프레임을 딕셔너리 형태로\n",
     "    '가격':[7000,8000,3000,3000,9000]\n",
     "})\n",
@@ -371,7 +371,7 @@
     "dfc2 = pd.concat([df1,df2],axis =1) \n",
     "dfc2\n",
     "# axis는 DataFrame에 적용되는 방향을 지정\n",
-    "# axis =0 은 함수가 행 단위로, axis=1 은 함수가 열 단위로 적용\n",
+    "# axis=0 함수가 행 단위로, axis=1 은 함수가 열 단위로 적용\n",
     "# axis=0 행방향 동작 -> 작업 결과가 행으로 나타남 * 책을 아래로 쌓아 정리\n",
     "# axis=1 열방향 동작 -> 작업 결과가 열로 나타남  * 책을 세워 옆으로 정리"
    ]
@@ -497,7 +497,7 @@
    ],
    "source": [
     "sr1=dfc2['메뉴1'] # 데이터프레임에서 하나의 칼럼을 선택하면 -> 시리즈가 됨\n",
-    "sr2=dfc2['가격2'] # 하지만 하나의 컬럼이라도 데이터프레임을 유지할 수 있음 -> 어떻게 -> [] 대괄호 사용하면 가능\n",
+    "sr2=dfc2['가격2'] # 하지만 하나의 컬럼이라도 데이터프레임을 유지할 수 있음 -> 어떻게 -> [[ ]] 대괄호 2개 사용하면 가능\n",
     "print(sr1,'\\n')\n",
     "print(sr2)"
    ]
@@ -578,8 +578,9 @@
     }
    ],
    "source": [
-    "# 가져온 칼럼이 시리즈-> 데이터프레임(시리즈의 모임)\n",
-    "df=pd.concat([sr1,sr2],axis=1)  # 시리즈는 컬럼 네임을 안줘도 가능 -> 시리즈의 네임이 컬럼 네임으로 할당 -> 리스트 배열 튜플은 컬럼 네임 줘야함\n",
+    "# 가져온 칼럼이 시리즈 -> 데이터프레임(시리즈의 모임)\n",
+    "# 시리즈는 컬럼 네임을 안줘도 가능 -> 시리즈의 네임이 컬럼 네임으로 할당 -> 리스트 배열 튜플은 컬럼 네임 줘야함\n",
+    "df = pd.concat([sr1,sr2],axis=1) \n",
     "df # 열 방향으로 병합 -> 세워 붙임"
    ]
   },
@@ -9775,7 +9776,7 @@
    "source": [
     "# 합집합\n",
     "df1.join(df2, lsuffix='_1', rsuffix='_2', how='outer')\n",
-    "# 4행 5열 합집함 5행 4열 --> 5행 9열"
+    "# 4행 5열 합집합 5행 4열 --> 5행 9열"
    ]
   },
   {
